Add Java16 and Java 17, Spigot 1.17.1 and Forge 1.18.1